# ginette

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  User_guide.md  User_guide.txt  meson.build  requirements.txt
application/1D_Diffusive/: 1D_Diffusion_GitHub_Example.ipynb  requirement_pip.txt
application/1D_Stream_aquifer_GridSearch/: 0_boundary_conditions_real_case.py  0_simulate_obs_data.py  1_define_grid_search.py  2_run_real_case.py  2_run_simulations.py  3_misfit.py  41_calcul_capacitecalofi.py  4_plot_results.py  CMakeLists.txt  Ginette_real_datal.ipynb  Synthetic_cases.ipynb  check_gridsearch.py
application/1D_Stream_aquifer_GridSearch/GINETTE_SENSI/: CMakeLists.txt
application/1D_col/: E_temperature_initiale.dat.npy  Inversion_begin.ipynb  README.md  advective_fluxes.R  compile_ginette.py  conductive_fluxes.R  fort.592  plot_pres.py  test.py
application/1D_col_2/: Inversion_begin.ipynb  fort.592  forward.ipynb  resukts_assets_ginette.py  transfer_6265856_files_c371a308.tar
application/2017_AVAV_SENSI/: Calibrated_values.f95  Calibrated_values_test.f95  InGinette.awk  Main_posttreat_alone.sh  Output_plot.py  README.md  agglo_line.sh  agglo_out.awk  anal_ginette.COMM  cat_agglo.sh  ginetteSteadyTransient_velocity.sh  main_oneFile.sh  main_oneFile_direct.sh  post_treat.sh  remove_first_line.sh  replaceParams.sh  run_2D_transient.py
application/2024_TD_ENS/: 2025_Projet_Modelisation_REE_VF.ipynb  TD1_direct_model.ipynb  TD2_synthetic_cases.ipynb  TD3_synthetic_cases.ipynb  TP4_MCMC_enonce.ipynb  sobol_enonce.ipynb
application/Destin/: ginette  run_ginette_simu.ipynb  setup_model.py
application/Infilt_test/: Warrick.R
application/Interfrost/: README.md
application/RIV2D/: 1_AmB_test.ipynb  1_AvAv_test.ipynb  (+10 more)
application/model_dharrma/: %% This is a Latex template file for art.sty  CMakeLists.txt  Direct_model.py  Init_folders.py  README.md  README_ENV.md  activate_env.sh  fonction_DHARRMA.py  main_DHARRMA.py  setup.py
application/model_dharrma/src_Cpp/: RPfunctions.pyx  RPfunctions_src.cpp  TTDSPfunctions.pyx  TTDSPfunctions_src.cpp  VGfunctions.pyx  VGfunctions_src.cpp  VGfunctions_src.h
base_code/: test.md
src/: __init__.py  ginette_V2.f  ginette_V2.f90
(+1492 files in other folders)
